fixing the alignment of copyright section for smaller display

--- a/styles.css
+++ b/styles.css
@@ -1778,4 +1778,8 @@ header {
   .socialIcons {
     justify-content: center;
   }
+
+  .footerBottom {
+    justify-content: center;
+  }
 }
